--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "webpack-dev-server --content-base config/dev-server-public --config webpack-dev-server.config.js --progress --colors --port 8080",
-    "hot-dev-server": "webpack-dev-server --content-base config/dev-server-public --config webpack-hot-dev-server.config.js --hot --progress --colors --port 8080",
-    "build": "webpack --config webpack-production.config.js --progress --profile --colors",
+    "dev-server": "aperture link && webpack-dev-server --content-base config/dev-server-public --config config/webpack-dev-server.config.js --progress --colors --port 8080",
+    "hot": "aperture link && webpack-dev-server --content-base config/dev-server-public --config config/webpack-hot-dev-server.config.js --hot --progress --colors --port 8080",
+    "build": "aperture link && webpack --config config/webpack-production.config.js --progress --profile --colors",
+    "deploy": "aperture link && webpack --config config/webpack-production.config.js --progress --profile --colors && gulp",
     "start": "node lib/server"
   },
   "keywords": [
@@ -20,22 +21,32 @@
   "author": "Measured, appropriated from react-starter by Tobias Koppers @sokra",
   "license": "MIT",
   "dependencies": {
+    "aperture": "^1.1.1",
+    "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.7.0",
     "express": "^4.7.2",
     "extract-text-webpack-plugin": "^0.2.3",
+    "file-loader": "^0.8.1",
+    "gulp": "^3.8.10",
+    "gulp-s3": "^0.3.0",
     "html-loader": "^0.2.2",
-    "jsx-loader": "^0.11.0",
-    "less": "^1.7.4",
-    "less-loader": "^0.7.5",
+    "jsx-loader": "^0.12.2",
+    "lodash": "^2.4.1",
     "null-loader": "^0.1.0",
-    "react": "^0.11.1",
-    "react-hot-loader": "^0.2.0",
+    "raw-loader": "^0.5.1",
+    "react": "^0.12.0",
+    "react-hot-loader": "^0.5.0",
     "react-proxy-loader": "^0.2.1",
+    "react-router": "^0.11.1",
     "reflux": "^0.1.5",
     "sass-loader": "^0.3.0",
-    "style-loader": "^0.6.4",
-    "stylus-loader": "^0.4.0",
     "webpack": "^1.3.2-beta9",
-    "webpack-dev-server": "^1.4.7"
+    "webpack-dev-server": "^1.4.7",
+    "xhr": "^1.17.0"
+  },
+  "aperture": {
+    "sources": [
+      "app/modules/*"
+    ]
   }
 }
