--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-proxy-loader": "^0.2.1",
     "react-router": "^0.11.1",
     "reflux": "^0.1.5",
-    "sass-loader": "^0.3.0",
+    "sass-loader": "0.3.1",
     "webpack": "^1.3.2-beta9",
     "webpack-dev-server": "^1.4.7",
     "xhr": "^1.17.0"
