--- a/app/modules/component-Example/package.json
+++ b/app/modules/component-Example/package.json
@@ -2,7 +2,7 @@
   "name": "component-Example",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "style": "_index.scss",
   "author": "",
   "license": "GPL-3.0"
