--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "dwebble",
   "version": "0.0.0",
-  "description": "shiny-ditto transformed into a webpack workflow",
+  "description": "dwebble is a webpack workflow",
   "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "aperture link && webpack-dev-server --content-base config/dev-server-public --config config/webpack-dev-server.config.js --progress --colors --port 8080",
-    "hot": "aperture link && webpack-dev-server --content-base config/dev-server-public --config config/webpack-hot-dev-server.config.js --hot --progress --colors --port 8080",
-    "build": "aperture link && webpack --config config/webpack-production.config.js --progress --profile --colors",
-    "deploy": "aperture link && webpack --config config/webpack-production.config.js --progress --profile --colors && gulp",
+    "dev": "webpack-dev-server --content-base config/dev-server-public --config config/webpack-dev-server.config.js --progress --colors --port 8080",
+    "hot": "webpack-dev-server --content-base config/dev-server-public --config config/webpack-hot-dev-server.config.js --hot --progress --colors --port 8080",
+    "build": "webpack --config config/webpack-production.config.js --progress --profile --colors",
+    "deploy": "webpack --config config/webpack-production.config.js --progress --profile --colors && gulp",
     "start": "node lib/server"
   },
   "keywords": [
@@ -21,7 +21,6 @@
   "author": "Measured, appropriated from react-starter by Tobias Koppers @sokra",
   "license": "MIT",
   "dependencies": {
-    "aperture": "^1.1.1",
     "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.7.0",
     "express": "^4.7.2",
@@ -43,10 +42,5 @@
     "webpack": "^1.3.2-beta9",
     "webpack-dev-server": "^1.4.7",
     "xhr": "^1.17.0"
-  },
-  "aperture": {
-    "sources": [
-      "app/modules/*"
-    ]
   }
 }
