--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dwebble",
   "version": "0.0.0",
   "description": "dwebble is a webpack workflow",
-  "main": "app/app.js",
+  "main": "App/app.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --content-base config/dev-server-public --config config/webpack-dev-server.config.js --progress --colors --port 8080",
@@ -37,7 +37,7 @@
     "react-hot-loader": "^0.5.0",
     "react-proxy-loader": "^0.2.1",
     "react-router": "^0.11.1",
-    "reflux": "^0.1.5",
+    "reflux": "^0.2.1",
     "sass-loader": "0.3.1",
     "webpack": "^1.3.2-beta9",
     "webpack-dev-server": "^1.4.7",
