--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^0.11.1",
     "reflux": "^0.2.1",
     "sass-loader": "0.3.1",
+    "url-loader": "^0.5.5",
     "webpack": "^1.3.2-beta9",
     "webpack-dev-server": "^1.4.7",
     "xhr": "^1.17.0"
