--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-router": "^0.11.1",
     "reflux": "^0.2.1",
     "sass-loader": "0.3.1",
-    "style-loader": "^0.8.2",
+    "style-loader": "0.6.5",
     "url-loader": "^0.5.5",
     "webpack": "^1.3.2-beta9",
     "webpack-dev-server": "^1.4.7",
